// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentTable should render PaymentTable correctly with props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(PaymentTable)
    classes={Object {}}
    payments={
      Array [
        Object {
          "balance": "$3,830.90",
          "date": "2018-09-28",
          "id": "5bcaf299081302b4b3edf7e0",
          "purpose": "bill",
          "sum": "$558.00",
        },
        Object {
          "balance": "$2,408.67",
          "date": "2017-11-30",
          "id": "5bcaf2995e06351ef89f4647",
          "purpose": "bill",
          "sum": "$866.00",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "icon": "PaymentTable-icon-5",
        "iconWrapper": "PaymentTable-iconWrapper-4",
        "table": "PaymentTable-table-1",
        "td": "PaymentTable-td-3",
        "th": "PaymentTable-th-2",
      },
      "payments": Array [
        Object {
          "balance": "$3,830.90",
          "date": "2018-09-28",
          "id": "5bcaf299081302b4b3edf7e0",
          "purpose": "bill",
          "sum": "$558.00",
        },
        Object {
          "balance": "$2,408.67",
          "date": "2017-11-30",
          "id": "5bcaf2995e06351ef89f4647",
          "purpose": "bill",
          "sum": "$866.00",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "icon": "PaymentTable-icon-5",
          "iconWrapper": "PaymentTable-iconWrapper-4",
          "table": "PaymentTable-table-1",
          "td": "PaymentTable-td-3",
          "th": "PaymentTable-th-2",
        },
        "payments": Array [
          Object {
            "balance": "$3,830.90",
            "date": "2018-09-28",
            "id": "5bcaf299081302b4b3edf7e0",
            "purpose": "bill",
            "sum": "$558.00",
          },
          Object {
            "balance": "$2,408.67",
            "date": "2017-11-30",
            "id": "5bcaf2995e06351ef89f4647",
            "purpose": "bill",
            "sum": "$866.00",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`PaymentTable should render PaymentTable correctly without props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(PaymentTable)
    classes={Object {}}
    payments={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "icon": "PaymentTable-icon-5",
        "iconWrapper": "PaymentTable-iconWrapper-4",
        "table": "PaymentTable-table-1",
        "td": "PaymentTable-td-3",
        "th": "PaymentTable-th-2",
      },
      "payments": Array [],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "icon": "PaymentTable-icon-5",
          "iconWrapper": "PaymentTable-iconWrapper-4",
          "table": "PaymentTable-table-1",
          "td": "PaymentTable-td-3",
          "th": "PaymentTable-th-2",
        },
        "payments": Array [],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
